testdata/baselines/reference/submodule/compiler/importAndVariableDeclarationConflict3.errors.txt
importAndVariableDeclarationConflict3.ts(5,8): error TS2300: Duplicate identifier 'x'.
importAndVariableDeclarationConflict3.ts(5,8): error TS2300: Duplicate identifier 'x'.
importAndVariableDeclarationConflict3.ts(6,8): error TS2300: Duplicate identifier 'x'.
importAndVariableDeclarationConflict3.ts(6,8): error TS2300: Duplicate identifier 'x'.


==== importAndVariableDeclarationConflict3.ts (4 errors) ====
    module m {
      export var m = '';
    }
    
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
           ~
!!! error TS2300: Duplicate identifier 'x'.
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
           ~
!!! error TS2300: Duplicate identifier 'x'.
    